--- a/src/components/case.scss
+++ b/src/components/case.scss
@@ -119,7 +119,7 @@
     font-size: 36px;
     line-height: 42px;
     margin: 0;
-    text-wrap: balance;
+    // text-wrap: balance;
   }
 
   p {
@@ -305,7 +305,7 @@
       }
 
       figcaption {
-        text-align: right;
+        // text-align: right;
 
         @media screen and (max-width: 920px) {
           text-align: left;
